[project]
name = "gpu-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fugashi[unidic-lite]>=1.5.1",
    "mlx-lm>=0.26.3",
    "protobuf>=6.32.0",
    "strands-agents[openai]>=1.5.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]
