[project]
name = "gpu-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fugashi[unidic-lite]>=1.5.1",
    # Only install mlx-lm on macOS ARM64
    'mlx-lm>=0.26.3; sys_platform == "darwin" and platform_machine == "arm64"',
    "protobuf>=6.32.0",
    "strands-agents-tools>=0.2.4",
    "strands-agents[openai]>=1.5.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]
